# watchout

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: CNAME  index.md
watchout/: __main__.py  get_unicode_info.py
